[tool.poetry]
name = "SideWinder"
version = "0.1.0"
description = "python kit"
authors = ["alex-haw <hawxx012@d.umn.edu>"]

exclude = ['logging']

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
doctest2 = "^0.1"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"